Added createdAt for Messages
